package com.socialpulse.app.common.utils;

public enum ReactionType {
    UPVOTE,
    DOWNVOTE
}
